feat: architectural changes, cors, fix copying

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,24 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # HTML: always revalidated
+    # ──────────────────────────────────────────────
+    # Compression
+    # ──────────────────────────────────────────────
+    gzip on;
+    gzip_types text/plain text/css application/javascript application/json image/svg+xml;
+    gzip_min_length 256;
+
+    # ──────────────────────────────────────────────
+    # Security headers (applied to every response)
+    # ──────────────────────────────────────────────
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+
+    # ──────────────────────────────────────────────
+    # HTML: always revalidate
+    # ──────────────────────────────────────────────
     location = /index.html {
         try_files /index.html =404;
         add_header Cache-Control "no-cache";
@@ -17,32 +34,49 @@ server {
         add_header Cache-Control "no-cache";
     }
 
-    # Service worker: long-lived, versioned by CACHE_VERSION
+    # ──────────────────────────────────────────────
+    # Service worker: always revalidate
+    # The filename never changes, and browsers cap SW cache at 24h per
+    # spec — but proxies and CDNs don't know that, so use no-cache.
+    # ──────────────────────────────────────────────
     location = /sw.js {
         try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header Cache-Control "no-cache";
     }
 
-    # Static bundle assets (JS, CSS, images) emitted by Vite
+    # ──────────────────────────────────────────────
+    # Vite-hashed static assets (JS, CSS, images)
+    # Filenames include a content hash, so immutable is safe.
+    # ──────────────────────────────────────────────
     location ^~ /assets/ {
         try_files $uri =404;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    # resources-manifest.json (treated like static asset)
+    # ──────────────────────────────────────────────
+    # Resource manifest: always revalidate
+    # Content changes on every build; filename stays the same.
+    # ──────────────────────────────────────────────
     location = /resources-manifest.json {
         try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header Cache-Control "no-cache";
     }
 
-    # Contents (PDFs and other files)
+    # ──────────────────────────────────────────────
+    # Contents (PDFs and other downloadable files)
+    # Content can change but doesn't change frequently — cache 24h.
+    # ──────────────────────────────────────────────
     location ^~ /contents/ {
         try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header Cache-Control "public, max-age=86400";
     }
 
-    # Fallback: any other request tries static file, then index.html
+    # ──────────────────────────────────────────────
+    # Fallback: serve the file or 404
+    # This is not a SPA with client-side routing — there is only one
+    # page. Any path that doesn't match a real file should 404.
+    # ──────────────────────────────────────────────
     location / {
-        try_files $uri /index.html;
+        try_files $uri =404;
     }
 }
