--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up SSH key
+      # VPS_HOST_KEY should be set from the output of: ssh-keyscan <host>
+      - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+          echo "${{ secrets.VPS_HOST_KEY }}" >> ~/.ssh/known_hosts
 
       - name: Deploy on VPS
         run: |
           ssh -i ~/.ssh/id_ed25519 ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} '
             set -e
             cd ~/mitm-mnc-resources
-            git pull
+            git pull origin main
             docker build -t class-site .
             docker rm -f class-site || true
             docker run -d --name class-site -p 80:80 class-site
+            sleep 3
+            curl -sf http://localhost/ > /dev/null || (docker logs class-site && exit 1)
+            docker image prune -f
           '
