--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ R2_BUCKET=mnc-resources
 
 # CDN base URL for content (set during build for production)
 # Leave empty for local dev (Vite proxy handles /contents → R2)
-VITE_CDN_BASE_URL=
+VITE_CDN_BASE_URL=https://cdn.mnc.achus.casa
 
 # Cloudflare Pages (used by deploy-app workflow)
 CLOUDFLARE_API_TOKEN=
