--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ node_modules
 dist
 .env
 cdn-worker/.wrangler
+
+# Terraform
+infra/.terraform/
+infra/*.tfstate
+infra/*.tfstate.backup
+infra/.terraform.lock.hcl
+infra/terraform.tfvars
+infra/*.tfplan
