--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ R2_BUCKET=mnc-resources
 # Leave empty for local dev (Vite proxy handles /contents → R2)
 VITE_CDN_BASE_URL=https://cdn.mnc.achus.casa
 
+# CMS API URL (set during build for production)
+# Leave empty for local dev (Vite proxy handles /api → cms-worker)
+VITE_CMS_API_URL=https://cms.achus.casa
+
+# CMS Worker secrets
+BETTER_AUTH_SECRET=
+RESEND_API_KEY=
+
 # Cloudflare Pages (used by deploy-app workflow)
 CLOUDFLARE_API_TOKEN=
 CLOUDFLARE_ACCOUNT_ID=
