--- a/cms-worker/package.json
+++ b/cms-worker/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "db:migrate:local": "wrangler d1 execute mnc-cms --local --file=migrations/0001_auth.sql && wrangler d1 execute mnc-cms --local --file=migrations/0002_business.sql",
-    "db:migrate:remote": "wrangler d1 execute mnc-cms --remote --file=migrations/0001_auth.sql && wrangler d1 execute mnc-cms --remote --file=migrations/0002_business.sql"
+    "db:migrate:local": "wrangler d1 execute mnc-cms --local --file=migrations/0001_auth.sql && wrangler d1 execute mnc-cms --local --file=migrations/0002_business.sql && wrangler d1 execute mnc-cms --local --file=migrations/0003_roster.sql",
+    "db:migrate:remote": "wrangler d1 execute mnc-cms --remote --file=migrations/0001_auth.sql && wrangler d1 execute mnc-cms --remote --file=migrations/0002_business.sql && wrangler d1 execute mnc-cms --remote --file=migrations/0003_roster.sql"
   },
   "dependencies": {
     "better-auth": "^1.2.0",
     "drizzle-orm": "^0.45.1",
-    "hono": "^4.7.0"
+    "hono": "^4.7.0",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
