--- a/cms-worker/package.json
+++ b/cms-worker/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "better-auth": "^1.2.0",
     "drizzle-orm": "^0.45.1",
-    "hono": "^4.7.0",
-    "resend": "^6.9.2"
+    "hono": "^4.7.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
