--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250214.0",
 		"@types/node": "^22.0.0",
+		"vitest": "^4.0.18",
 		"wrangler": "^4.67.0"
 	}
 }
