--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,13 @@
 		"better-auth": "^1.2.0"
 	},
 	"devDependencies": {
+		"@mnc/shared": "workspace:*",
+		"@solidjs/testing-library": "^0.8.10",
+		"@testing-library/jest-dom": "^6.9.1",
+		"jsdom": "^28.1.0",
+		"msw": "^2.12.10",
 		"vite": "^6.0.0",
 		"vite-plugin-solid": "^2.11.0",
-		"@mnc/shared": "workspace:*"
+		"vitest": "^4.0.18"
 	}
 }
